# collection

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DEVELOPMENT.md  DEV_GUIDE.md  Dockerfile  Doxyfile  LICENSE  README.md  docker-compose.yml  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
cmake/: collection-config.cmake.in  collectionConfig.cmake.in
docs/: _array_8c.html  _array_8c.js  _array_8h.html  _array_8h.js  _array_8h_source.html  _collection_8h.html  _collection_8h_source.html  _dictionary_8c.html  _dictionary_8c.js  _dictionary_8h.html  _dictionary_8h.js  _dictionary_8h_source.html  _i_array_8h.html  _i_array_8h.js  _i_array_8h_source.html  _i_dictionary_8h.html  _i_dictionary_8h.js  _i_dictionary_8h_source.html  _mutex_8h.html  _mutex_8h.js  _mutex_8h_source.html  annotated.html  annotated_dup.js  array_8c.html  array_8c.js  array_8h.html  array_8h.js  array_8h_source.html  classes.html  collection_8h.html  collection_8h_source.html  dictionary_8c.html  dictionary_8c.js  dictionary_8h.html  dictionary_8h.js  dictionary_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  (+59 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  groups_0.js  groups_1.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  (+11 more)
examples/: CMakeLists.txt  ExampleArrayBasic.c  ExampleArrayClone.c  ExampleArrayRemove.c  ExampleDictionaryBasic.c  ExampleDictionaryRemove.c  ExampleDictionaryReplace.c  array_basic.c  array_clone_clear.c  array_remove.c  dictionary_basic.c  dictionary_remove_clear.c  dictionary_replace_contains.c  example_array_basic.c  example_array_clone.c  example_array_remove.c  example_dictionary_basic.c  example_dictionary_remove.c  example_dictionary_replace.c
include/collection/: IArray.h  IDictionary.h  Mutex.h  array.h  collection.h  dictionary.h  i_array.h  i_dictionary.h  i_platform.h  iarray.h  idictionary.h  mutex.h
src/: Array.c  Array.h  Dictionary.c  Dictionary.h  Queue.c  array.c  array.h  dictionary.c  dictionary.h
src/platform/posix/: mutex.c
src/platform/win/: mutex.c
test/: ArrayTest.c  ArrayTest.h  CMakeLists.txt  DictionaryTest.c  DictionaryTest.h  MutexTest.c  MutexTest.h  TestArray.c  TestDictionary.c  array_test.c  dictionary_test.c  test_array.c  test_array.h  test_dictionary.c  test_dictionary.h  test_mutex.c  test_mutex.h
