add_executable(ExampleArrayBasic example_array_basic.c)
target_link_libraries(ExampleArrayBasic PRIVATE collection::collection)
add_test(NAME Collection.Example.ArrayBasic COMMAND ExampleArrayBasic)

add_executable(ExampleArrayClone example_array_clone.c)
target_link_libraries(ExampleArrayClone PRIVATE collection::collection)
add_test(NAME Collection.Example.ArrayClone COMMAND ExampleArrayClone)

add_executable(ExampleArrayRemove example_array_remove.c)
target_link_libraries(ExampleArrayRemove PRIVATE collection::collection)
add_test(NAME Collection.Example.ArrayRemove COMMAND ExampleArrayRemove)

add_executable(ExampleDictionaryBasic example_dictionary_basic.c)
target_link_libraries(ExampleDictionaryBasic PRIVATE collection::collection)
add_test(NAME Collection.Example.DictionaryBasic COMMAND ExampleDictionaryBasic)

add_executable(ExampleDictionaryRemove example_dictionary_remove.c)
target_link_libraries(ExampleDictionaryRemove PRIVATE collection::collection)
add_test(NAME Collection.Example.DictionaryRemove COMMAND ExampleDictionaryRemove)

add_executable(ExampleDictionaryReplace example_dictionary_replace.c)
target_link_libraries(ExampleDictionaryReplace PRIVATE collection::collection)
add_test(NAME Collection.Example.DictionaryReplace COMMAND ExampleDictionaryReplace)
