add_executable(ArrayTest test_array.c)
target_link_libraries(ArrayTest PRIVATE collection::collection)
if(COLLECTION_ENABLE_SANITIZERS AND NOT MSVC)
    target_link_options(ArrayTest PRIVATE -fsanitize=address,undefined)
endif()
add_test(NAME Collection.ArrayTest COMMAND ArrayTest)

add_executable(DictionaryTest test_dictionary.c)
target_link_libraries(DictionaryTest PRIVATE collection::collection)
if(COLLECTION_ENABLE_SANITIZERS AND NOT MSVC)
    target_link_options(DictionaryTest PRIVATE -fsanitize=address,undefined)
endif()
add_test(NAME Collection.DictionaryTest COMMAND DictionaryTest)

add_executable(MutexTest test_mutex.c)
target_link_libraries(MutexTest PRIVATE collection::collection)
if(COLLECTION_ENABLE_SANITIZERS AND NOT MSVC)
    target_link_options(MutexTest PRIVATE -fsanitize=address,undefined)
endif()
add_test(NAME Collection.MutexTest COMMAND MutexTest)
